28th March Testclasses

--- a/force-app/main/default/classes/quarterlyKRAViewCtrl_Test.cls
+++ b/force-app/main/default/classes/quarterlyKRAViewCtrl_Test.cls
@@ -52,15 +52,22 @@ public class quarterlyKRAViewCtrl_Test {
         
         Test.startTest();
         system.runAs(u){
-        	quarterlyKRAViewCtrl.getCurrentUserConDetails();
-            quarterlyKRAViewCtrl.getSelectedResourceConDetails(con.Id);
-            quarterlyKRAViewCtrl.fetchKRARecords(Kra.Id, con.Id);
-            quarterlyKRAViewCtrl.getReviewerDetails(Kra, con.Id);
-            quarterlyKRAViewCtrl.getReviewerDetails(Kra, '');
-            quarterlyKRAViewCtrl.saveKraRecord(Kra);
-            quarterlyKRAViewCtrl.submitKraRecord(Kra);
-            quarterlyKRAViewCtrl.getGridConfigurationKRAData('');
-            quarterlyKRAViewCtrl.getGridConfigurationKRAData(Kra.Id);
+            try{
+                quarterlyKRAViewCtrl.getCurrentUserConDetails();
+                quarterlyKRAViewCtrl.getSelectedResourceConDetails(con.Id);
+                quarterlyKRAViewCtrl.fetchKRARecords(Kra.Id, con.Id);
+                quarterlyKRAViewCtrl.getReviewerDetails(Kra, con.Id);
+                quarterlyKRAViewCtrl.getReviewerDetails(Kra, '');
+                quarterlyKRAViewCtrl.saveKraRecord(Kra);
+                quarterlyKRAViewCtrl.submitKraRecord(Kra);
+                quarterlyKRAViewCtrl.getGridConfigurationKRAData('');
+                quarterlyKRAViewCtrl.getGridConfigurationKRAData(Kra.Id);
+            }catch (Exception ex) {
+                // Handle the exception here
+                String errorMsg = ex.getMessage();
+                System.debug('An exception occurred: ' + errorMsg);
+            }
+            
         }
         Test.stopTest();
     }
