--- a/force-app/main/default/classes/RRController_Test.cls
+++ b/force-app/main/default/classes/RRController_Test.cls
@@ -188,6 +188,8 @@ public class RRController_Test {
         System.debug(' 190 MentorUser' + MentorUser);
         Fulfillment__c Ful = [Select Id,Resource__c,Fiscal_Year__c From Fulfillment__c WHERE Resource__c =: MenteeCon.Id ];
         List<Fiscal_Year__c> FY = [Select Id,Name FROM Fiscal_Year__c WHERE Id =: Ful.Fiscal_Year__c LIMIT 1];
+        System.debug(' 191 Ful' + Ful);
+        System.debug(' 192 FY' + FY);
         Grid_Configuration__c gc =  [Select Id,Name FROM Grid_Configuration__c WHERE Name = 'Annual Awards Noms FY FY 2023 - 2024'];
         List<String> AwardTypeList = new List<String>{'Best Entrepreneur', 'Most Professional', 'Rising Star', 'Rock Star', 'Shining Star', 'Going Above and Beyond', 'Award of Excellence'};
             
@@ -202,7 +204,7 @@ public class RRController_Test {
             //SCORING_RECORDTYPE records 
             for(String awardType : AwardTypeList ){
                 Reward_And_Recognition__c rec = new Reward_And_Recognition__c();
-                rec.Fiscal_Year__c = FY[0].Id;
+                rec.Fiscal_Year__c = Ful.Fiscal_Year__c;
                 rec.Resource__c = MenteeCon.Id;
                 rec.Recognization_By__c = MentorCon.EMS_TM_User__c;
                 rec.RecordTypeId = RR_SCORING_RECORDTYPEID;
@@ -218,7 +220,7 @@ public class RRController_Test {
             List<Reward_And_Recognition__c> MyNominsToInsert = New List<Reward_And_Recognition__c>();
             for(String awardType : AwardTypeList ){
                 Reward_And_Recognition__c MyNomins = new Reward_And_Recognition__c();
-                MyNomins.Fiscal_Year__c = FY[0].Id;
+                MyNomins.Fiscal_Year__c = Ful.Fiscal_Year__c;
                 MyNomins.Resource__c = MenteeCon.Id;
                 MyNomins.Recognization_By__c = MentorCon.EMS_TM_User__c;
                 MyNomins.RecordTypeId = RR_NOMINATION_RECORDTYPEID;
@@ -234,7 +236,7 @@ public class RRController_Test {
             //ShoutOutType records 
             for(String ShoutOutType : ShoutOutsTypeList ){
                 Reward_And_Recognition__c rec = new Reward_And_Recognition__c();
-                rec.Fiscal_Year__c = FY[0].Id;
+                rec.Fiscal_Year__c = Ful.Fiscal_Year__c;
                 rec.Resource__c = MenteeCon.Id;
                 rec.Recognization_By__c = MentorCon.EMS_TM_User__c;
                 rec.RecordTypeId = RR_WINNER_RECORDTYPEID;
@@ -253,7 +255,7 @@ public class RRController_Test {
             //Recognize Type records 
             for(String RecognizeType : RecognizeTypeList ){
                 Reward_And_Recognition__c rec = new Reward_And_Recognition__c();
-                rec.Fiscal_Year__c = FY[0].Id;
+                rec.Fiscal_Year__c = Ful.Fiscal_Year__c;
                 rec.Resource__c = MenteeCon.Id;
                 rec.Recognization_By__c = MentorCon.EMS_TM_User__c;
                 rec.RecordTypeId = RR_WINNER_RECORDTYPEID;
