--- a/force-app/main/default/classes/createProjectAfterOppWonTest.cls
+++ b/force-app/main/default/classes/createProjectAfterOppWonTest.cls
@@ -21,11 +21,15 @@ public class createProjectAfterOppWonTest {
          INSERT con;
         Integer count =1;
         List<Opportunity> oppList =TestDataFactory.createOpportunity(acc.id,count,false);
+       Date newDate = System.today();
+       Date futureDate = myDate.addDays(5);
         oppList[0].Project_Manager__c =con.Id;
         oppList[0].Contract_Start_Date__c = System.today();
           oppList[0].ACV__c='Yes';
             oppList[0].Lead_Generation__c='referral';
             oppList[0].Identify_Target_Market__c='Advisory Services';
+            oppList[0].Final_Agreement_Date__c=system.today();
+            oppList[0].Expected_Kick_off_Date__c=futureDate;
         INSERT oppList;
         
         test.startTest();
